--- a/static/index.html
+++ b/static/index.html
@@ -81,38 +81,45 @@
     async function login() {
     const login = document.getElementById('login').value;
     const password = document.getElementById('password').value;
-    const response = await fetch('http://localhost:5000/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ login, password })
-    });
-    const data = await response.json();
-    if (data.status === 'success') {
-        currentUser = data.user;
-        document.getElementById('auth').classList.add('hidden');
-        document.getElementById('main').classList.remove('hidden');
 
-        // Убираем динамическое добавление кнопки
-        document.getElementById('editOrderBtn').classList.remove('hidden');
+    try {
+        const response = await fetch('http://localhost:5000/login', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ login, password })
+        });
 
-        if (currentUser.role === 'admin') {
-            document.getElementById('adminBtn').classList.remove('hidden');
+        const data = await response.json();
+
+        if (data.status === 'success') {
+            currentUser = data.user;
+            localStorage.setItem('currentUser', JSON.stringify(currentUser)); // Сохраняем пользователя
+            document.getElementById('auth').classList.add('hidden');
+            document.getElementById('main').classList.remove('hidden');
+            document.getElementById('editOrderBtn').classList.remove('hidden');
+            if (currentUser.role === 'admin') {
+                document.getElementById('adminBtn').classList.remove('hidden');
+            }
+        } else {
+            alert(data.message); // Сообщение об ошибке от сервера (например, неверные данные)
         }
-    } else {
-        alert(data.message);
+    } catch (error) {
+        console.error('Ошибка подключения к серверу аутентификации:', error);
+        alert('Сервер авторизации не работает. Пожалуйста, попробуйте позже.');
     }
 }
 
     // Регистрация
     async function register() {
-        const login = document.getElementById('regLogin').value;
-        const password = document.getElementById('regPassword').value;
-        const contact = document.getElementById('contact').value;
+    const login = document.getElementById('regLogin').value;
+    const password = document.getElementById('regPassword').value;
+    const contact = document.getElementById('contact').value;
 
+    try {
         const response = await fetch('http://localhost:5000/register', {
             method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({login, password, contact})
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ login, password, contact })
         });
 
         const data = await response.json();
@@ -120,9 +127,13 @@
         if (data.status === 'success') {
             showLogin();
         } else {
-            alert(data.message);
+            alert(data.message); // Сообщение об ошибке от сервера (например, логин занят)
         }
+    } catch (error) {
+        console.error('Ошибка подключения к серверу аутентификации:', error);
+        alert('Сервер авторизации не работает. Пожалуйста, попробуйте позже.');
     }
+}
 
     // Выход
     function logout() {
