Добавлено сообщение об ошибке в случае выключенного сервиса авторизации

--- a/static/index.html
+++ b/static/index.html
@@ -105,7 +105,7 @@
         }
     } catch (error) {
         console.error('Ошибка подключения к серверу аутентификации:', error);
-        alert('Сервер авторизации не работает. Пожалуйста, попробуйте позже.');
+        alert('Сервер авторизации временно недоступен. Пожалуйста, попробуйте позже.');
     }
 }
 
@@ -131,7 +131,7 @@
         }
     } catch (error) {
         console.error('Ошибка подключения к серверу аутентификации:', error);
-        alert('Сервер авторизации не работает. Пожалуйста, попробуйте позже.');
+        alert('Сервер авторизации временно недоступен. Пожалуйста, попробуйте позже.');
     }
 }
 
